# labs-mcp

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml  run_server.py
.github/actions/python_prepare/: action.yml
.github/workflows/: build_and_push_image.yml  python_ci.yml
labs-mcp/: pyproject.toml
labs-mcp/src/labs_mcp/: run_server.py  server.py
server/: app.py  market.py  run_server.py
tests/: test_app.py
tests_integration/: test_market_predictions.py
