[project]
name = "labs-mcp"
version = "0.1.0"
description = "Add your description here"
requires-python = "~=3.10"
dependencies = [
    "prediction-market-agent",
      "mcp[cli]>=1.4.1",
]



[tool.uv.sources]
prediction-market-agent = { git = "https://github.com/gnosis/prediction-market-agent" }

[dependency-groups]
dev = [
    "black>=23.12.1",
    "pytest>=8.3.5",
]

