[project]
name = "labs-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gabrielfior", email = "fior.gbm@gmail.com" }
]
requires-python = "~=3.10"
dependencies = [
    "mcp[cli]>=1.4.1",
]

[project.scripts]
mcp_server = "labs_mcp.run_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
